[tool.poetry]
name = "teleproxy"
version = "0.1.0"
description = ""
authors = ["bboysoul <bboysoulcn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
